--- a/src/index.css
+++ b/src/index.css
@@ -322,9 +322,10 @@ top: 662px; */
   justify-content: center;
 }
 .form-group {
-  margin-bottom: 20px; /* Add space between form groups */
-  
+width: 50%;  
+margin-bottom: 10px;
 }
+
 .appointment-form h2 {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 40px;
@@ -343,7 +344,7 @@ label {
   margin-bottom: 5px; 
 }
 select{
-  width: 40%; 
+  width: 80%; 
   padding: 8px;
   box-sizing: border-box;
   color: #034ea1;
@@ -351,8 +352,12 @@ select{
   border-radius: 6px;
   border-width: 0.5px;
 }
+.proceed{
+  display: flex;
+  justify-content: center;
+}
 input {
-  width: 40%; 
+  width: 80%; 
   padding: 8px;
   box-sizing: border-box;
   color: #034ea1;
@@ -370,10 +375,10 @@ input {
   transition: background-color 0.3s ease;
   display: flex;
   justify-content: center;
-  
+ align-content: center; 
   border-radius: 8px;
   width: 30%;
-  margin-left: 525px;
+ 
 
 }
 #button-book:hover {
@@ -406,4 +411,12 @@ input {
   -webkit-text-fill-color: transparent;
   font-weight: bold;
   
+}
+
+.main_div{
+  display: flex;
+  flex-direction: row;
+  row-gap: 10px;
+  margin-bottom: 10px;
+  width: 100%;
 }
